edit logger levels to add debug and error levels